[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/FredokaOne-Regular-64.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/FredokaOne-Regular-42.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/play_button.png" type="Texture" id=3]
[ext_resource path="res://PostPlay.gd" type="Script" id=4]
[ext_resource path="res://fonts/FredokaOne-Regular-32.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/tada.ogg" type="AudioStream" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 16.0
content_margin_right = 16.0
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.74902, 1, 0.564706, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=4]
resource_name = "flaunt"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}

[node name="PostPlay" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 222.0
margin_right = 576.0
margin_bottom = 802.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreHeading" type="Label" parent="VBoxContainer"]
margin_right = 576.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Score"
align = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 576.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 1 )
text = "69"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer1" type="PanelContainer" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 576.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 36 )
custom_styles/panel = SubResource( 2 )

[node name="HighScoreHeading" type="Label" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 576.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "High Score"
align = 1

[node name="NewHighScore" type="PanelContainer" parent="VBoxContainer"]
margin_left = 234.0
margin_top = 233.0
margin_right = 341.0
margin_bottom = 281.0
rect_rotation = 3.68773
rect_pivot_offset = Vector2( 53, 24 )
size_flags_horizontal = 4
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/NewHighScore"]
margin_left = 16.0
margin_top = 4.0
margin_right = 91.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.752941, 1, 0.505882, 1 )
text = "NEW"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/NewHighScore"]
autoplay = "flaunt"
anims/flaunt = SubResource( 4 )

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 285.0
margin_right = 576.0
margin_bottom = 364.0
custom_fonts/font = ExtResource( 1 )
text = "420"
align = 1

[node name="Spacer2" type="PanelContainer" parent="VBoxContainer"]
margin_top = 368.0
margin_right = 576.0
margin_bottom = 448.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = SubResource( 2 )

[node name="PlayBtn" type="TextureButton" parent="VBoxContainer"]
margin_left = 224.0
margin_top = 452.0
margin_right = 352.0
margin_bottom = 580.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="SfxTada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
